feat: properly implement refreshing tokens, fix server and add functinoality to client's auth-guard and http-interceptor
