# pop-web/src/app/core/modules/openapi/model/models.ts
@@ -26,8 +26,6 @@ export * from './measure-schema';
 export * from './neoplastic-entity';
 export * from './neoplastic-entity-create';
 export * from './neoplastic-entity-relationship-choices';
-export * from './new-sliding-token-schema';
-export * from './old-sliding-token-schema';
 export * from './paginated-neoplastic-entity';
 export * from './paginated-patient-case';
 export * from './paginated-tumor-marker';
@@ -41,14 +39,16 @@ export * from './riss-staging';
 export * from './riss-staging-create';
 export * from './rai-staging';
 export * from './rai-staging-create';
+export * from './refreshed-token-pair-schema';
 export * from './resource-id-schema';
 export * from './response';
 export * from './rhabdomyosarcoma-clinical-group';
 export * from './rhabdomyosarcoma-clinical-group-create';
-export * from './sliding-token-schema';
 export * from './staging-domain';
 export * from './tnm-staging';
 export * from './tnm-staging-create';
+export * from './token-pair-schema';
+export * from './token-refresh-schema';
 export * from './tumor-marker';
 export * from './tumor-marker-create';
 export * from './tumor-marker-immune-cell-score-choices';
