# pop-web/src/app/core/modules/openapi/model/refreshed-token-pair-schema.ts
@@ -9,7 +9,8 @@
  */
 
 
-export interface OldSlidingTokenSchema { 
-    token: string;
+export interface RefreshedTokenPairSchema { 
+    refresh: string;
+    access: string | null;
 }
 
