# pop-web/src/app/core/modules/openapi/model/token-refresh-schema.ts
@@ -9,7 +9,7 @@
  */
 
 
-export interface NewSlidingTokenSchema { 
-    token: string;
+export interface TokenRefreshSchema { 
+    refresh: string;
 }
 
